--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--<link rel="stylesheet" href="css/main.css">-->
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/responsive.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
         <script src="https://use.typekit.net/wqh0vqt.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
@@ -45,8 +45,6 @@
             </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
