--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -10,10 +10,15 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="icon" type="image/x-icon" href="favicon.png" />
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/LikelyMain.css">
+        <link rel="stylesheet" href="src/css/normalize.css">
+        <link rel="stylesheet" href="src/css/LikelyMain.css">
+        <script src="src/js/main.js"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+
+
+        <script src="src/js/vendor/modernizr-2.8.3.min.js"></script>
+
         <script src="https://use.typekit.net/wqh0vqt.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
@@ -48,7 +53,8 @@
             <div id = "upload-box">
                 <div id = "upload-photo">
                     <div class = "upload-text">
-                        Upload photo
+                        <div>Upload photo </div>
+                        <input type="file" onchange="uploadPhoto()">
                     </div>
                 </div>
 
