--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="icon" type="image/x-icon" href="favicon.png" />
 
-        <!--<link rel="stylesheet" href="css/normalize.css">-->
-        <link rel="stylesheet" href="css/normalize.css">
-        <!--<link rel="stylesheet" href="css/main.css">-->
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/responsive.css">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+        <link rel="stylesheet" href="src/css/normalize.css">
+        <link rel="stylesheet" href="src/css/main.css">
+        <link rel="stylesheet" href="src/css/responsive.css">
+
+        <script src="src/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://use.typekit.net/wqh0vqt.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
