--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/main.css") }}">
-        <link rel="stylesheet" href="{{ static_url("css/responsive.css) }}">
+        <link rel="stylesheet" href="{{ static_url("css/responsive.css") }}">
 
         <script src="src/js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="https://use.typekit.net/wqh0vqt.js"></script>
