--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--<link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">-->
         <!--<link rel="stylesheet" href="{{ static_url("css/main.css") }}">-->
         <!--<link rel="stylesheet" href="{{ static_url("css/responsive.css") }}">-->
-        <link rel="stylesheet" href="src/css/normalize.css">
+        <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/main.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/responsive.css") }}">
 
