--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -10,9 +10,9 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="icon" type="image/x-icon" href="favicon.png" />
 
-        <link rel="stylesheet" href="src/css/normalize.css">
-        <link rel="stylesheet" href="src/css/LikelyMain.css">
-        <script src="src/js/main.js"></script>
+        <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
+        <link rel="stylesheet" href="{{ static_url("css/LikelyMain.css") }}">
+        <script src="{{ static_url("js/main.js") }}"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 
