--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -42,7 +42,7 @@
 
             <div id = "user-info">
                 <div class = "user-photo">
-                    <img src="img/user-exmp.jpg">
+                    <img src="{{ static_url("img/user-exmp.jpg") }}">
                 </div>
 
                 <div class = "user-name">
