--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="icon" type="image/x-icon" href="favicon.png" />
+        <link rel="icon" type="image/x-icon" href="{{ static_url("favicon.png") }}">
 
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/LikelyMain.css") }}">
