--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class = "user-name">
-                    nati_an91
+                    {{uname}}
                 </div>
             </div>
 
