--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -54,7 +54,7 @@
                 <div id = "upload-photo">
                     <div class = "upload-text">
                         <div>Upload photo </div>
-                        <input type="file" onchange="uploadPhoto()">
+                        <input type="file">
                     </div>
                 </div>
 
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div id = "predict-button">
+            <div id = "predict-button" onclick="uploadPhoto()">
                 PREDICT
             </div>
 
