--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -67,10 +67,10 @@
                         </div>
                     </div>
                 </div>
-                <input type="submit" value="upload">
 
-                <div id = "predict-button" onclick="uploadPhoto()">
-                    PREDICT
+
+                <div id = "predict-button">
+                    <input type="submit" value="PREDICT">
                 </div>
             </form>
 
