--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -33,12 +33,14 @@
         <!-- #################################  Likely Main   ################################# -->
 
         <div id = "content-wrapper">
-            <div id = "logo-box">
-                <div id = "top-logo"></div>
-                <div id = "logo-line">
-                    Manage your likes
+            <a href="http://likely.uk.to/">
+                <div id = "logo-box">
+                    <div id = "top-logo"></div>
+                    <div id = "logo-line">
+                        Manage your likes
+                    </div>
                 </div>
-            </div>
+            </a>
 
             <div id = "user-info">
                 <div class = "user-photo">
