--- a/LikelyResults.html
+++ b/LikelyResults.html
@@ -11,8 +11,8 @@
         <link rel="icon" type="image/x-icon" href="{{ static_url("favicon.png") }}">
 
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
-        <!--<link rel="stylesheet" href="{{ static_url("css/LikelyResults.css") }}">-->
-        <link rel="stylesheet" href="css/LikelyResults.css">
+        <link rel="stylesheet" href="{{ static_url("css/LikelyResults.css") }}">
+        <!--<link rel="stylesheet" href="css/LikelyResults.css">-->
         <script src="{{ static_url("js/main.js") }}"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
@@ -34,12 +34,12 @@
         <!-- #################################  Likely Main   ################################# -->
 
         <div id = "post-image">
-            <img src="img/ExNati.png">
+            <img src={{iPath}}>
         </div>
 
         <div id = "likes-results">
             <div id = "likes">
-                38
+                {{nLikes}}
             </div>
 
             <div id = "likes_expected">
@@ -54,16 +54,16 @@
             <div id = "post-info">
                 <div id = "user-info">
                     <div class = "user-photo">
-                        <img src="img/user-exmp.jpg">
+                        <img src={{pProfile}}>
                     </div>
 
                     <div class = "user-name">
-                        nati_an91
+                        {{uName}}
                     </div>
                 </div>
 
                 <div id = "caption-text">
-                    <span class = "bold-name">nati_an91 &nbsp</span> text text text ##like like
+                    <span class = "bold-name">{{uName}} &nbsp</span> {{caption}}
                 </div>
             </div>
 
