--- a/LikelyResults.html
+++ b/LikelyResults.html
@@ -33,7 +33,7 @@
         <!-- #################################  Likely Main   ################################# -->
 
         <div id = "post-image">
-            <img src={{iPath}}>
+            <img src="{{ static_url(iPath) }}">
         </div>
 
         <div id = "likes-results">
