--- a/LikelyResults.html
+++ b/LikelyResults.html
@@ -12,6 +12,7 @@
 
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/LikelyResults.css") }}">
+        <link rel="stylesheet" href="{{ static_url("css/LikelyResultsRes.css") }}">
         <!--<link rel="stylesheet" href="css/LikelyResults.css">-->
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
