--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -12,6 +12,8 @@
 
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/LikelyMain.css") }}">
+        <link rel="stylesheet" href="{{ static_url("css/LikelyResultsRes.css") }}">
+
         <script src="{{ static_url("js/main.js") }}"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
