--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/LikelyMain.css") }}">
-        <link rel="stylesheet" href="{{ static_url("css/LikelyResultsRes.css") }}">
+        <link rel="stylesheet" href="{{ static_url("css/LikelyMainRes.css") }}">
 
         <script src="{{ static_url("js/main.js") }}"></script>
 
