--- a/restest.html
+++ b/restest.html
@@ -11,8 +11,8 @@
         <link rel="icon" type="image/x-icon" href="{{ static_url("favicon.png") }}">
 
         <link rel="stylesheet" href="{{ static_url("css/normalize.css") }}">
-        <link rel="stylesheet" href="{{ static_url("css/LikelyResults.css") }}">
-        <!--<link rel="stylesheet" href="css/LikelyResults.css">-->
+        <!--<link rel="stylesheet" href="{{ static_url("css/LikelyResults.css") }}">-->
+        <link rel="stylesheet" href="css/LikelyResults.css">
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 
@@ -32,44 +32,8 @@
 
         <!-- #################################  Likely Main   ################################# -->
 
-        <div id = "post-image">
-            <img src="{{ static_url(iPath) }}">
-        </div>
-
-        <div id = "likes-results">
-            <div id = "likes">
-                {{nLikes}}
-            </div>
-
-            <div id = "likes_expected">
-                likes expected
-            </div>
-
-        </div>
-
 
         <div id = "content-wrapper">
-
-            <div id = "post-info">
-                <div id = "user-info">
-                    <div class = "user-photo">
-                        <img src={{pProfile}}>
-                    </div>
-
-                    <div class = "user-name">
-                        {{uName}}
-                    </div>
-                </div>
-
-                <div id = "caption-text">
-                    <span class = "bold-name">{{uName}} &nbsp</span> {{caption}}
-                </div>
-            </div>
-
-
-            <div class = "button" id = "post_button">
-                POST
-            </div>
 
             <div id = "suggestions">
                 <div id = "suggest_head">
@@ -82,15 +46,25 @@
                     </div>
 
                     <div id="bars" style="display: flex">
-
-                        {% for elem in hour_likes %}
-
                         <div class="bar">
-                            <div class="likes_value" style="bottom: {{elem[2]}}%">{{elem[1]}}</div>
-                            <div class="hour_value">{{elem[0}}</div>
+                            <div class="likes_value" style="bottom: 30%">5</div>
+                            <div class="hour_value">10</div>
                         </div>
 
-                        {% end %}
+                        <div class="bar">
+                            <div class="likes_value" style="bottom: 60%">7</div>
+                            <div class="hour_value">11</div>
+                        </div>
+
+                        <div class="bar">
+                            <div class="likes_value" style="bottom: 70%">3</div>
+                            <div class="hour_value">12</div>
+                        </div>
+
+                        <div class="bar">
+                            <div class="likes_value" style="bottom: 90%">3</div>
+                            <div class="hour_value">12</div>
+                        </div>
 
                     </div>
 
@@ -98,12 +72,6 @@
                 </div>
 
             </div>
-
-            <a href="javascript:history.back()">
-            <div class = "button" id = "change_button">
-                CHANGE SOMETHING
-            </div>
-            </a>
 
         </div>
 
