--- a/LikelyMain.html
+++ b/LikelyMain.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="{{ static_url("css/LikelyMain.css") }}">
         <link rel="stylesheet" href="{{ static_url("css/LikelyMainRes.css") }}">
 
-        <script src="{{ static_url("js/main.js") }}"></script>
+        <script src="{{ static_url("js/main.js") }}" type="text/javascript"></script>
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
 
@@ -74,9 +74,13 @@
 
 
                 <div id = "predict-button">
-                    <input type="submit" value="PREDICT">
+                    <input type="submit" value="PREDICT" onclick="show_loader()">
                 </div>
             </form>
+
+            <div id = "loader_cont">
+                <div class="loader"></div>
+            </div>
 
         </div>
 
