--- a/LikelyResults.html
+++ b/LikelyResults.html
@@ -84,12 +84,12 @@
                     <div id="bars" style="display: flex">
 
                         {% for elem in hour_likes %}
-
-                        <div class="bar">
-                            <div class="likes_value" style="bottom: {{elem[2]}}%">{{elem[1]}}</div>
-                            <div class="hour_value">{{elem[0}}</div>
-                        </div>
-
+                            {% block elem %}
+                                <div class="bar">
+                                    <div class="likes_value" style="bottom: {{elem[2]}}%">{{elem[1]}}</div>
+                                    <div class="hour_value">{{elem[0}}</div>
+                                </div>
+                            {% end %}
                         {% end %}
 
                     </div>
