--- a/restest.html
+++ b/restest.html
@@ -20,6 +20,7 @@
         <script src="src/js/vendor/modernizr-2.8.3.min.js"></script>
 
         <script src="https://use.typekit.net/wqh0vqt.js"></script>
+
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
     </head>
     <body class="no-maegin">
@@ -32,6 +33,8 @@
 
         <!-- #################################  Likely Main   ################################# -->
 
+
+        <div class="loader"></div>
 
         <div id = "content-wrapper">
 
@@ -76,9 +79,8 @@
         </div>
 
 
+        <script src="js/main.js" type="text/javascript"></script>
 
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
