--- a/restest.html
+++ b/restest.html
@@ -79,6 +79,15 @@
         </div>
 
 
+        <!--{% for elem in hour_likes %}-->
+        <!--{% block elem %}-->
+        <!--<div class="bar">-->
+        <!--<div class="likes_value" style="bottom: {{elem[2]}}%">{{elem[1]}}</div>-->
+        <!--<div class="hour_value">{{elem[0}}</div>-->
+        <!--</div>-->
+        <!--{% end %}-->
+        <!--{% end %}-->
+
         <script src="js/main.js" type="text/javascript"></script>
 
 
