--- a/restest.html
+++ b/restest.html
@@ -51,6 +51,7 @@
                     <div id="bars" style="display: flex">
                         <div class="bar">
                             <div class="likes_value" style="bottom: 30%">5</div>
+                            <div class = "bar_line"></div>
                             <div class="hour_value">10</div>
                         </div>
 
@@ -78,15 +79,6 @@
 
         </div>
 
-
-        <!--{% for elem in hour_likes %}-->
-        <!--{% block elem %}-->
-        <!--<div class="bar">-->
-        <!--<div class="likes_value" style="bottom: {{elem[2]}}%">{{elem[1]}}</div>-->
-        <!--<div class="hour_value">{{elem[0}}</div>-->
-        <!--</div>-->
-        <!--{% end %}-->
-        <!--{% end %}-->
 
         <script src="js/main.js" type="text/javascript"></script>
 
