--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div id = "log-in-box" >
                 <div id ="log-in-logo"></div>
                 <div class = "line"></div>
-                <a href="https://www.instagram.com/oauth/authorize/?client_id=5f46ab2c0ce24bdaa966b3ea9b1b9b2a&redirect_uri=http://http://ec2-54-214-116-138.us-west-2.compute.amazonaws.com/app&response_type=code">
+                <a href="https://www.instagram.com/oauth/authorize/?client_id=5f46ab2c0ce24bdaa966b3ea9b1b9b2a&redirect_uri=http://ec2-54-214-116-138.us-west-2.compute.amazonaws.com/app&response_type=code">
                     <div class = "submit-button">
                         Continue
                     </div>
